--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,82 +1,3 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <title>Alpha-Blog</title>
-        <style type="text/css">
-          #header {
-              background-color:white;
-              color:black;
-              text-align:center;
-              padding:5px;
-              height:175px;
-              width:100%;
-              margin: 5px;
-          }
-          #section1 {
-              line-height:30px;
-              background-color:white;
-              color:black;
-              height:50%;
-              width:45%;
-              float:left;
-              padding:5px; 
-              margin: 5px;
-          }
-          #section2 {
-              line-height:30px;
-              background-color:white;
-              color:black;
-              height:50%;
-              width:45%;
-              float:left;
-              padding:5px;
-              margin: 5px;
-          }
-          #footer {
-              background-color:black;
-              color:white;
-              clear:both;
-              text-align:center;
-              padding:5px; 
-              margin: 5px;
-          }
-        </style>
-    </head>
-    <body>
-      <div id="header">
-      <h1>Welcome to my app!</h1><br>
-      </div>
-      
-      <div>
-        <iframe
-          width="100%"
-          height="175px"
-          frameborder="0" style="border:0"
-          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCGIv3ThbTJr_zGgCVsqt0Y3Ut1z8Elk3I
-            &q=Herbert+Park,Ballsbridge,Dublin" allowfullscreen>
-        </iframe>
-      </div>
-      
-      <hr>
-      
-      <div id="section1">
-        <h1>Some header here!</h1>
-        <p>
-          Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-        </p>
-      </div>
-      
-      <!-- <hr width="1" size="500"> -->
-      
-      <div id="section2">
-        <h1>Some header here!</h1>
-        <p>
-          Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-        </p>
-      </div>
-      
-      <div id="footer">
-      Copyright © W3Schools.com
-      </div>
-    </body>
-</html>
+<h1>This is the home page of my blog app</h1>
+
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
